# rust_clean_api

./: Cargo.toml  README.MD  README.md
src/: handler.rs  lib.rs  main.rs  model.rs  response.rs  route.rs
src/api/: mod.rs  router.rs
src/application/: mod.rs
src/application/commands/: create_lots_of_todos_command.rs  create_todo_command.rs  delete_todo_command.rs  mod.rs  update_todo_command.rs  update_todo_request.rs
src/application/commands/requests/: mod.rs  update_todo_request.rs
src/application/queries/: get_all_todos_query.rs  get_todo_by_id_query.rs  mod.rs  query_options.rs
src/domain/entities/: todo.rs
src/domain/models/: todo.rs
src/infrastructure/data/: mod.rs
src/infrastructure/data/db_context/: in_memory_db.rs  mod.rs  surreal_context.rs
src/infrastructure/data/interfaces/: idatabase.rs  mod.rs
src/infrastructure/data/repositories/: mod.rs  todo_repository.rs
